maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:28: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:10: error: type mismatch;
 found   : (Int, Int)
 required: Int
      Coord(sol+1)=Coord(sol+1)+marquage(List(i)(0),List(i)(1),sol)
                                                ^ShortestPathMaze:10: error: type mismatch;
 found   : (Int, Int)
 required: Int
      Coord(sol+1)=Coord(sol+1)+marquage(List(i)(0),List(i)(1),sol)
                                                           ^ShortestPathMaze:28: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^